--- a/src/styles/products/products.css
+++ b/src/styles/products/products.css
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 20px;
-    padding-top: 20px;
+    
   }
   .products-list {
     display: grid;
